--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "im.dnn.weathertoday"
         minSdkVersion 14
         targetSdkVersion 21
-        versionCode 1
-        versionName "1.0"
+        versionCode 4
+        versionName "2.0"
     }
     buildTypes {
         release {
@@ -21,5 +21,21 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.3'
+
+    // Librerias standar en el SDK de Android:
+    compile 'com.android.support:appcompat-v7:21.0.+'
+    compile 'com.android.support:cardview-v7:21.0.3'
+    compile 'com.android.support:recyclerview-v7:21.0.0'
+
+    // ion -> HTTP Client
+    compile 'com.koushikdutta.ion:ion:2.+'
+
+    // Picasso -> Cliente HTTP de imágenes y cache
+    compile 'com.squareup.picasso:picasso:2.5.+'
+
+    // Floating Action Button
+    compile 'com.getbase:floatingactionbutton:1.2.1'
+
+    // Dots Pagination
+    compile 'me.relex:circleindicator:1.1.2@aar'
 }
